--- a/ProiectMC/Client/Client.vcxproj.filters
+++ b/ProiectMC/Client/Client.vcxproj.filters
@@ -29,8 +29,10 @@
     <ClInclude Include="include\ui_MainWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\MainWindow.h">
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="include\MainWindow.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
+    </QtMoc>
   </ItemGroup>
 </Project>
