--- a/ProiectMC/Server/Server.vcxproj.filters
+++ b/ProiectMC/Server/Server.vcxproj.filters
@@ -66,12 +66,6 @@
     <ClCompile Include="..\SQLDataBase\TestDB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Map.cpp">
-      <Filter>Generated Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Bullet.cpp">
-      <Filter>Generated Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="include\ActiveClientGuard.h">
@@ -152,6 +146,15 @@
     <QtMoc Include="..\SQLDataBase\DBGamePlayer.cpp">
       <Filter>Source Files</Filter>
     </QtMoc>
+    <QtMoc Include="src\Bullet.cpp">
+      <Filter>Generated Files</Filter>
+    </QtMoc>
+    <QtMoc Include="include\Bullet.h">
+      <Filter>Generated Files</Filter>
+    </QtMoc>
+    <QtMoc Include="src\Map.cpp">
+      <Filter>Generated Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\SQLDataBase\DBGame.h">
@@ -176,9 +179,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\map.h">
-      <Filter>Generated Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\Bullet.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
