--- a/ProiectMC/ServerMC/include/SQLDataBase.vcxproj
+++ b/ProiectMC/ServerMC/include/SQLDataBase.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d041274f-e1ec-4442-bfff-92961f29cabd}</ProjectGuid>
-    <RootNamespace>ServerMC</RootNamespace>
+    <ProjectGuid>{37b68714-f7ca-49ca-809d-80b83f283ec7}</ProjectGuid>
+    <RootNamespace>SQLDataBase</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -76,6 +76,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>Default</LanguageStandard>
+      <EnableModules>false</EnableModules>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -90,6 +92,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>Default</LanguageStandard>
+      <EnableModules>false</EnableModules>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -104,6 +108,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>Default</LanguageStandard>
+      <EnableModules>false</EnableModules>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -118,6 +124,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>Default</LanguageStandard>
+      <EnableModules>false</EnableModules>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,57 +134,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="include\ActiveClientGuard.h" />
-    <ClInclude Include="include\Bomb.h" />
-    <ClInclude Include="include\Bullet.h" />
-    <ClInclude Include="include\DBBuilding.h" />
-    <ClInclude Include="include\DBGame.h" />
-    <ClInclude Include="include\DBGameBuilding.h" />
-    <ClInclude Include="include\DBGamePlayer.h" />
-    <ClInclude Include="include\DBPlayer.h" />
-    <ClInclude Include="include\DBPlayerWithRegion.h" />
-    <ClInclude Include="include\DBRegion.h" />
-    <ClInclude Include="include\Event.h" />
-    <ClInclude Include="include\GameBuildingDAO.h" />
-    <ClInclude Include="include\GameDAO.h" />
-    <ClInclude Include="include\GameEndEvent.h" />
-    <ClInclude Include="include\GameSession.h" />
-    <ClInclude Include="include\map.h" />
-    <ClInclude Include="include\Player.h" />
-    <ClInclude Include="include\PlayerDAO.h" />
-    <ClInclude Include="include\PlayerEliminatedEvent.h" />
-    <ClInclude Include="include\PowerUpEvent.h" />
-    <ClInclude Include="include\Server.h" />
-    <ClInclude Include="include\Weapon.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="src\DBGame.cpp" />
-    <ClCompile Include="src\DBGameBuilding.cpp" />
-    <ClCompile Include="src\DBGamePlayer.cpp" />
-    <ClCompile Include="src\DBPlayer.cpp" />
-    <ClCompile Include="src\DBPlayerHandler.cpp" />
-    <ClCompile Include="src\DBPlayerWithRegion.cpp" />
-    <ClCompile Include="src\DBRegion.cpp" />
-    <ClCompile Include="src\GameBuildingDAO.cpp" />
-    <ClCompile Include="src\GameDAO.cpp" />
-    <ClCompile Include="src\PlayerDAO.cpp" />
-    <ClCompile Include="src\SQLliteDataBase.cpp" />
-    <ClCompile Include="src\TestDB.cpp" />
-    <ClCompile Include="src\ActiveClientGuard.cpp" />
-    <ClCompile Include="src\Bomb.cpp" />
-    <ClCompile Include="src\Bullet.cpp" />
-    <ClCompile Include="src\GameEndEvent.cpp" />
-    <ClCompile Include="src\GameSession.cpp" />
-    <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Map.cpp" />
-    <ClCompile Include="src\moc_Server.cpp" />
-    <ClCompile Include="src\Player.cpp" />
-    <ClCompile Include="src\PlayerEliminatedEvent.cpp" />
-    <ClCompile Include="src\PowerUpEvent.cpp" />
-    <ClCompile Include="src\Server.cpp" />
-    <ClCompile Include="src\Weapon.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
