--- a/ProiectMC/ServerMC/ServerMC.vcxproj
+++ b/ProiectMC/ServerMC/ServerMC.vcxproj
@@ -135,19 +135,18 @@
     <ClInclude Include="include\Bomb.h" />
     <ClInclude Include="include\Bullet.h" />
     <ClInclude Include="include\Direction.h" />
-    <ClInclude Include="include\Event.h" />
     <ClInclude Include="include\GameSession.h" />
-    <ClInclude Include="include\map.h" />
     <ClInclude Include="include\Player.h" />
     <ClInclude Include="include\Server.h" />
     <ClInclude Include="include\Weapon.h" />
+    <ClInclude Include="include\Map.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Map.cpp" />
     <ClCompile Include="src\ActiveClientGuard.cpp" />
     <ClCompile Include="src\Bomb.cpp" />
     <ClCompile Include="src\Bullet.cpp" />
     <ClCompile Include="src\GameSession.cpp" />
-    <ClCompile Include="src\Map.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\Weapon.cpp" />
