--- a/ProiectMC/ClientMC/ClientMC.vcxproj.filters
+++ b/ProiectMC/ClientMC/ClientMC.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="src\ClientFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ClientMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\ClientFunctions.h">
