--- a/ProiectMC/ClientMC/ClientMC.vcxproj
+++ b/ProiectMC/ClientMC/ClientMC.vcxproj
@@ -70,6 +70,22 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\include;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\include;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\include;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\include;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\include;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\include;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\include;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\include;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -81,6 +97,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -98,6 +115,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -111,6 +129,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -128,14 +147,26 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\ClientFunctions.cpp" />
+    <ClCompile Include="src\ClientLogic.cpp" />
     <ClCompile Include="src\ClientMain.cpp" />
+    <ClCompile Include="src\NetworkManager.cpp" />
+    <ClCompile Include="src\SDLHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\ClientFunctions.h" />
+    <ClInclude Include="include\ClientLogic.h" />
+    <ClInclude Include="include\NetworkManager.h" />
+    <ClInclude Include="include\SDLHelper.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="include\SDL2.dll" />
+    <None Include="include\SDL2_image.dll" />
+    <None Include="include\SDL2_ttf.dll" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
